package jp.co.afis.model

import jp.co.afis.bean.Position
import jp.co.afis.model.player.Players

class Game(val players: Players, board: Board) {
    fun click(pos: Position) {

    }

    private fun updateCurrentPlayer() {

    }
}
